# basic_renderer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  flatland_nerf
include/: Camera.h  CameraCal.h  CameraOps.h  CameraSimulator.h  CoordTools.h  Light.h  Ray.h  Renderer.h  SceneObject.h  SimImage.h  random_float.h  types.h
src/: main.cpp
src/utils/: Camera.cpp  CameraCal.cpp  CameraOps.cpp  CameraSimulator.cpp  Light.cpp  Ray.cpp  Renderer.cpp  SceneObject.cpp
